# tjpgdec-sys

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: minifb.rs  minifb2.rs.bak  minifb_static.rs  minifb_vec.rs
src/: lib.rs  wrapper.c  wrapper.h
tjpgd/: README.md  example.c  tjpgd.h
