[package]
name = "tjpgdec_sys"
version = "0.1.0"
authors = ["9names <60134748+9names@users.noreply.github.com>"]
edition = "2018"
# links = "tjpgd"

[dependencies]
cty = "0.2.2"

[build-dependencies]
bindgen = "^0"
cc = "^1"

[dev-dependencies]
minifb = "^0.27.0"

[features]
default = ["descale", "table_sat"]
RGB565 = []
descale = []
table_sat = []